# robotics-assignment2-bayesian-filtering

./: .gitignore  01-detect-track.py  03-show-result-video.py  main.py  pyproject.toml  report.html  report.md
docs/: README.md  index.html  report.html  report.md  slide.html  slide.md
notebooks/: kf.ipynb  yolo.ipynb
results/: track_detection_result.pkl  track_position.csv  truck_kf_results.csv  truck_position.csv
